--- a/src/styles/mixins/elements.scss
+++ b/src/styles/mixins/elements.scss
@@ -15,10 +15,7 @@
   overflow: visible;
   background: transparent;
   color: inherit;
-  font: inherit;
   line-height: normal;
-  -webkit-font-smoothing: inherit;
-  -moz-osx-font-smoothing: inherit;
   -webkit-appearance: none;
 }
 
